# filesUp-ASC

./: .gitignore  .stylelintrc.json  README.md  create_icon.py  dev-output.txt  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.ai/: AGENT_PROMPT.md  Moderator_prompt.md  STATE_PROMPT.md  state.json  state.md
.ai/Moderator_prompt/: Moderator-prompt
.ai/bundles/: latest.bundle.md
README/Admin Guides/: ELI10  flow-Task-Contract.txt  ELI10_TaskFlow_Runes_Flows_Tasks_Contracts_Bundle.md  TUF -EIL10-Russian.md  TUF-Update-Admin-Guide.md  TUF-Updates-workflow.md
README/Prompts/: AI_Prompts.md  ASC Prompts.txt  Examples.md  Moderator prompt.md  prompt 2 App Evidence Pipeline.txt
README/Tasks/: Task 1  main page layout.txt
README/UI/: Theme color.txt
qa/: index.ts  qa.mjs
scripts/: pack.mjs  qa.mjs  run-contracts.mjs  run-contracts.ts  size-guard.mjs  state.mjs  state_old.mjs
src/: App.svelte  app.css  app.html  index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: placeholder.txt
src-tauri/src/: ai_bundle.rs  lib.rs  main.rs  metrics.rs
src-tauri/src/update/: mod.rs  tuf_client.rs  tuf_config.rs  update_manager.rs  version_fs.rs
src/UI/: ThemeSwitcher.svelte
src/components/: DebugBundleViewer.svelte  FolderBrowser.svelte  ThemeSwitcher.svelte
src/core/: GPS.ts  folder-scan.rs  index.ts  opsBus.ts  startupCoordinator.ts  startupOrchestrator.ts  storeInstrumentation.ts  writeBundle.ts
src/statusBar/: statusbar.store.ts
src/utils/: abort.ts  bodyScrollLock.ts  clickOutside.ts  console-hook.ts  (+35 more)
(+79 files in other folders)
