[package]
name = "filesup-asc"
version = "0.0.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# TUF client library from AWS Labs (production-grade TUF client)
# tough = "0.21"  # Requires CMake build tool

# For robust error handling
anyhow = "1.0"

# Semantic versions for comparing app versions
semver = "1.0"

# Reading and extracting ZIP archives with safe path handling
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# URL parsing for TUF repo endpoints
url = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
